--- a/less/tiles.less
+++ b/less/tiles.less
@@ -175,6 +175,9 @@
       .the-width ( 2, 10 );
       background-color: white;  
       height: 420px;
+      &.open {
+        height: 630px;
+      }
     }
     &.open {
       .the-width ( 6, 10 );
@@ -229,7 +232,7 @@
       height: 210px;
       &.featured { 
         .the-width ( 2, 6 ); 
-        height: 420px;
+        //height: 420px;
       }
       &.open {
         .the-width ( 6, 6 );
